# samplebot

./: .eslintrc.js  .gitignore  Cargo.toml  Dockerfile  database.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
migrations/: 20200622004926-init.js
script/: setup
src/: bot.js  bot.ts  discord.rs  dropbox.rs  index.d.ts  main.rs  youtube.rs
src/tests/: bot_test.js  bot_test.ts
